ADD: 5_sem/supervisor/hw3

--- a/5_sem/supervisor/hw3/Makefile
+++ b/5_sem/supervisor/hw3/Makefile
@@ -12,8 +12,8 @@ OBJS_2 = func_equations.o f.o
 OBJS_3 = func_integrals.o f.o
 
 all: 1_1.out 1_2.out 1_3.out \
-	 2_1.out 2_2.out 2_3.out 2_4.out 2_5.out 2_7.out 2_8.out 2_9.out 2_10.out \
-	 3_1.out 3_2.out 3_3.out 3_4.out
+	 2_1.out 2_2.out 2_3.out 2_4.out 2_5.out 2_6.out 2_7.out 2_8.out 2_9.out 2_10.out \
+	 3_1.out 3_2.out 3_3.out 3_4.out 3_5.out 3_6.out 3_7.out 3_8.out 3_9.out
 
 # Functions
 func_interpolation.o: func_interpolation.c $(HEADERS)
@@ -27,6 +27,7 @@ func_integrals.o: func_integrals.c $(HEADERS)
 
 f.o: f.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
+
 
 # Interpolation
 1_1.out: main_1_1.o $(OBJS_1)
@@ -43,6 +44,7 @@ main_1_2.o: main_1_2.c $(HEADERS)
 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
 main_1_3.o: main_1_3.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
+
 
 # Equations
 2_1.out: main_2_1.o $(OBJS_2)
@@ -70,10 +72,10 @@ main_2_4.o: main_2_4.c $(HEADERS)
 main_2_5.o: main_2_5.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
 
-# 2_6.out: main_2_6.o $(OBJS_2)
-# 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
-# main_2_6.o: main_2_6.c $(HEADERS)
-# 	$(CC) $(CFLAGS) $< -o $@
+2_6.out: main_2_6.o $(OBJS_2)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_2_6.o: main_2_6.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
 
 2_7.out: main_2_7.o $(OBJS_2)
 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
@@ -95,10 +97,6 @@ main_2_9.o: main_2_9.c $(HEADERS)
 main_2_10.o: main_2_10.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
 
-# 2_1.out: main_2_1.o func_equations.o f.o
-# 	gcc -g $^ -o $@ -lm
-# main_2_1.o: main_2_1.c
-# 	gcc $< $(CFLASGS) 
 
 # Integrals
 3_1.out: main_3_1.o $(OBJS_3)
@@ -119,6 +117,31 @@ main_3_3.o: main_3_3.c $(HEADERS)
 3_4.out: main_3_4.o $(OBJS_3)
 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
 main_3_4.o: main_3_4.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
+
+3_5.out: main_3_5.o $(OBJS_3)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_3_5.o: main_3_5.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
+
+3_6.out: main_3_6.o $(OBJS_3)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_3_6.o: main_3_6.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
+
+3_7.out: main_3_7.o $(OBJS_3)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_3_7.o: main_3_7.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
+
+3_8.out: main_3_8.o $(OBJS_3)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_3_8.o: main_3_8.c $(HEADERS)
+	$(CC) $(CFLAGS) $< -o $@
+
+3_9.out: main_3_9.o $(OBJS_3)
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
+main_3_9.o: main_3_9.c $(HEADERS)
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
