--- a/5_sem/supervisor/hw4/Makefile
+++ b/5_sem/supervisor/hw4/Makefile
@@ -10,7 +10,7 @@ HEADERS = addition.h
 OBJS = func.o init.o matr_op.o
 
 
-all: 1.out 2.out 3.out 4.out 5.out 6.out #7.out 8.out 9.out 10.out
+all: 1.out 2.out 3.out 4.out 5.out 6.out 7.out 8.out 9.out 10.out
 
 
 # Functions
