FIX: 5_sem/SLU/hw2

--- a/5_sem/SLU/hw2/Cholesky_decomposition_new/Makefile
+++ b/5_sem/SLU/hw2/Cholesky_decomposition_new/Makefile
@@ -1,22 +1,28 @@
-CFLASGS = -c -Wall -Wextra -pedantic -Werror -O3 -g -pg
-SHELL = /bin/sh
+LIBS  = -lm
+GPROF = -pg
+DEBUG = -g #$(GPROF)
 
-all: a.out
+CC = g++ -c
+LD = g++
 
-a.out: main.o solve.o in_out.o norm.o matr_operation.o block_action.o
-	g++ -g -pg $^ -o $@
-main.o: main.cpp solve.h
-	g++ $< $(CFLASGS) 
-solve.o: solve.cpp solve.h in_out.h norm.h block_action.h matr_operation.h addition.h
-	g++ $< $(CFLASGS) 
-matr_operation.o: matr_operation.cpp matr_operation.h addition.h
-	g++ $< $(CFLASGS) 
-block_action.o: block_action.cpp block_action.h addition.h
-	g++ $< $(CFLASGS) 
-norm.o: norm.cpp norm.h addition.h
-	g++ $< $(CFLASGS)	
-in_out.o: in_out.cpp in_out.h addition.h
-	g++ $< $(CFLASGS)
+CFLAGS	= $(DEBUG) -W -Wall -Wextra -pedantic -Werror -O3
+LDFLAGS = $(DEBUG)
 
-clean:
-	rm -rf *.o *.out 
+
+all: a.out clean_obj
+
+a.out: $(patsubst %.cpp,%.o,$(wildcard *.cpp))
+	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@ 
+
+%.o: %.cpp
+	$(CC) $(CFLAGS) -MD $<
+
+include $(wildcard *.d)
+
+
+clean_obj:
+	rm -f *.o *.d
+	
+clean: clean_obj
+	rm -f *.out 
+
