--- a/5_sem/SLU/hw1/Cholesky_decomposition_block/Makefile
+++ b/5_sem/SLU/hw1/Cholesky_decomposition_block/Makefile
@@ -9,7 +9,7 @@ CFLAGS	= $(DEBUG) -W -Wall -Wextra -pedantic -Werror -O3
 LDFLAGS = $(DEBUG)
 
 
-all: a.out clean_obj
+all: a.out clean_d
 
 a.out: $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@ 
@@ -20,9 +20,9 @@ a.out: $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 include $(wildcard *.d)
 
 
-clean_obj:
-	rm -f *.o *.d
+clean_d:
+	rm -f *.d
 	
 clean: clean_obj
-	rm -f *.out 
+	rm -f *.o *.out 
 
