--- a/6_sem/Cholesky_decomposition_mpi/Makefile
+++ b/6_sem/Cholesky_decomposition_mpi/Makefile
@@ -5,20 +5,20 @@ DEBUG = -g #$(GPROF)
 CC = mpicxx -c
 LD = mpicxx
 
-CFLAGS	= $(DEBUG) #-W -Wall -Wextra -pedantic -Werror -O3
+CFLAGS	= $(DEBUG) -W -Wall -O3 #-Wextra -pedantic -Werror
 LDFLAGS = $(DEBUG)
 
 
 NAME = a.out
 #OBJS = $(patsubst %.cpp,%.o,$(wildcard *.cpp))
-OBJS = addition.o size_arguments.o in_out.o block_action.o main.o
+OBJS = addition.o size_arguments.o in_out.o block_action.o matr_operation.o solve.o main.o
 
 all : $(NAME)
 
 $(NAME) : $(OBJS)
 	$(LD) $(LDFLAGS) $^ $(LIBS) -o $@
 
-%.o: %.cpp addition.h
+%.o: %.cpp 
 	$(CC) $(CFLAGS) $< -o $@
 
 clean:
