FIX: 6_sem/Cholesky_decomposition_mpi: SLU with not integer blocks + test scripts

--- a/6_sem/Cholesky_decomposition_mpi/Makefile
+++ b/6_sem/Cholesky_decomposition_mpi/Makefile
@@ -5,12 +5,11 @@ DEBUG = -g #$(GPROF)
 CC = mpicxx -c
 LD = mpicxx
 
-CFLAGS	= $(DEBUG) -W -Wall -O3 #-Wextra -pedantic -Werror
+CFLAGS	= $(DEBUG) -W -Wall -O3 -Wextra -pedantic #-Werror
 LDFLAGS = $(DEBUG)
 
 
 NAME = a.out
-#OBJS = $(patsubst %.cpp,%.o,$(wildcard *.cpp))
 OBJS = addition.o size_arguments.o in_out.o block_action.o matr_operation.o norm.o solve.o main.o
 
 all : $(NAME)
